# krat_os

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.cargo/: config  config.toml
linker/: virt.lds
src/: fdt.rs  kheap.rs  kmain.rs  lib.rs  logger.rs  main.rs  memlayout.rs  plic.rs  proc.rs  riscv.rs  sched.rs  syscall.rs  trap.rs  uart.rs
src/asm/: boot.asm  mem.asm  trap.asm
src/debug/: mod.rs
src/drivers/: mod.rs  plic.rs  uart.rs
src/macros/: mod.rs
src/mem/: addr.rs  mod.rs  phys.rs  pte.rs  virt.rs
src/mm/: addr.rs  mod.rs  phys.rs  pte.rs  virt.rs
src/pages/: allocator.rs  mod.rs
src/utils/: logger.rs  macros.rs  mod.rs
src/vmem/: addr.rs  mod.rs  palloc.rs  phys.rs  pte.rs  valloc.rs  virt.rs
