[package]
name = "krat_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic


[dependencies]
riscv = "0.7.0"
uart_16550 = "0.2.16"
bitflags = "1.3.2"
linked_list_allocator = "0.9.1"
fdt = "0.1.3"
