[package]
name = "krat_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
riscv = "0.7.0"
uart_16550 = "0.2.16"
bitflags = "1.3.2"
linked_list_allocator = "0.9.1"
fdt = "0.1.3"
spin = "0.9.2"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
log = { version = "0.4.14", features = [
    "max_level_info", "release_max_level_info"
] }
