[package]
name = "krat-os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "krat-os"
path = "src/kmain.rs"
test = false
bench = false

[profile.release]
lto = true
codegen-units = 1

[dependencies]
riscv = "0.8.0"
uart_16550 = "0.2.18"
bitflags = "1.3.2"
linked_list_allocator = "0.10.1"
fdt = "0.1.3"
spin = "0.9.3"
lazy_static = { version = "1.4.0", features = [ "spin_no_std" ] }
log = { version = "0.4.17", features = [
    "release_max_level_info"
] }
sbi = "0.2.0"
